# web-render-rs

./: .gitignore  Cargo.toml  index.html  notes  readme.md  rustfmt.toml  tsconfig.json
assets/: config.json  engine_config.json  scene_config.json
assets/shaders/: general.vert  pbr.frag  terrain.frag
config/: .cargo
macros/: Cargo.toml
macros/src/: lib.rs
src/: camera.rs  context.rs  lib.rs  light.rs  program.rs  shader.rs  warning.rs
src/config/: engine_config.rs  mod.rs  scene_config.rs
src/gltf/: mod.rs
src/input/: mod.rs  mouse.rs  slider.rs
src/lights/: mod.rs
src/model/: buffer.rs  buffer_view.rs  material.rs  mesh.rs  mod.rs  terrain.rs  texture.rs
src/model/mesh/: mod.rs
src/model/mesh/generator/: cube.rs  face.rs  icosphere.rs  mod.rs  superellipse.rs  supershape_2d.rs  terrain.rs  uv_sphere.rs  vertex.rs
src/model/primitives/: face.rs  mod.rs  vertex.rs
src/resources/: image_future.rs  mod.rs  traits.rs
src/scene_graph/: mod.rs
ts/: load_model.ts  main.ts
