[package]
name = "web-render-rs"
version = "0.1.0"
authors = ["jacob <jacobrwguenther@protonmail.com>"]
edition = "2018"
description = "A webgl 2 renderer"
license = "AGPLv3"
repository = "https://github.com/jacobguenther/web-render-rs"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z" # 1 2 3 "s" "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"] # -O1 -O2 -O3 -O4 -Os -Oz



[dependencies.js-sys]
version = "0.3.48"
default-features = false

[dependencies.serde-wasm-bindgen]
version = "0.1.3"
default-features = false

[dependencies.wasm-bindgen-futures]
version = "0.4.21"
default-features = false

[dependencies.cgmath]
version = "0.18.0"
default-features = false

[dependencies.wasm-bindgen]
version = "0.2.71"
default-features = false
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0.59"
default-features = false
features = ["derive"]

[dependencies.web-sys]
version = "0.3.4"
default-features = false
features = [
	'console',
	'Performance',
	'PerformanceTiming',
	'Window',
	'Document',
	'HtmlCollection',
	'Element',
	'HtmlCanvasElement',
	'HtmlImageElement',

	'WebGl2RenderingContext',
	'WebGlBuffer',
	'WebGlShader',
	'WebGlProgram',
	'WebGlUniformLocation',
	'WebGlTexture',
	'WebGlVertexArrayObject',

	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
]
